#11344 consolidate api definition, make port configurable
update swagger file to represent current routes, include routes with parameters in swagger tests
